[package]
name = "rust-async-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["connection-manager", "tokio-comp"] }
thiserror = "1.0"
async-trait = "0.1.74"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3.29"
async-channel = "2.1.0"
log = "0.4.20"
env_logger = "0.10.1"
codegen = { path = "./codegen" }

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[example]]
name = "async-redis"
path = "examples/async-redis.rs"

[[example]]
name = "test-codegen"
path = "examples/test-codegen.rs"
