[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codegen"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "fold", "extra-traits"] }
quote = "1.0.8"
proc-macro-error = "1"
proc-macro2 = "1"
